frontend/test/should_pass/exec_003.grg
using deep_model_001;

rule r(b : B) : (B) {
  modify{
    return (b);
    exec(r(b));
    exec((x:B)=r(b));
    exec((x:B)=r(x));
    exec((x:B)=r(b) && r(x));
    exec((x:B)=r(b) && (x)=r(x));
    exec((x:B)=r(x) && (x)=r(x));
    exec((x:B)=r(b) && (x)=r(b));
  }
}
