frontend/test/should_fail/exec_024.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  modify{
    exec( b:boolean = ((b)=r(y)) );
    return (y);
  }
}
